--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./css/responsive.css">
-    <title>Clinick</title>
+    <title>Mediplus</title>
     <script defer="defer" src="./static/js/main.c3038aeb.js"></script>
     <link href="./static/css/main.e6c13ad2.css" rel="stylesheet">
 </head>
